--- a/README
+++ b/README
@@ -7,7 +7,7 @@ Benvingut al repositori de BOTIGA
     - l'aplicació agafa les credencials del fitxer config.php, per no haver de compartir
        les credencials aquest fitxer està exclos del seguiment de git per .gitignore. No obstant
        teniu un fitxer de exemple config.php.sample
-2. les imatges de l'aplicació no estan amb el codi del repositori, les teniu a al servidor 10.15.0.221/examen/img.tar
+2. les imatges de l'aplicació no estan amb el codi del repositori, les teniu a al servidor  http://10.100.78.221/examen/img.zip
 3. podeu provar l'aplicació sense el sistema de rutes teniu el fitxer llista.php
 
 
